# Troll_Treasure

./: README.md  pyproject.toml
troll_treasure/: commands.py  virtual_env_install.sh
troll_treasure.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
